--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "ionic-car-release",
+  "name": "react-ionic-test",
   "version": "0.0.1",
   "private": true,
+  "proxy": "http://localhost:4040",
+  "main": "server/server.js",
   "dependencies": {
     "@ionic/react": "^4.11.8",
     "@ionic/react-router": "^4.11.8",
@@ -14,7 +16,12 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express-session": "^1.17.0",
     "ionicons": "^4.6.3",
+    "massive": "^6.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
