--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "proxy": "http://localhost:4040",
-  "main": "server/server.js",
+  "main": "server/server.ts",
   "dependencies": {
     "@ionic/react": "^4.11.8",
     "@ionic/react-router": "^4.11.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
     "@types/jest": "^24.0.25",
+    "@types/massive": "^5.4.3",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
